--- a/Stadions.html
+++ b/Stadions.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Stadions</title>
+    <link rel="stylesheet" href="CssStadions.css">
     <style>
         #map{
             width: 100%;
@@ -11,7 +12,10 @@
     </style>
 </head>
 <body>
-<H3>Google map</H3>
+<button value="" id="home">
+    <img src="Foto/762fbd2c-6988-4cfc-83d4-7a7da0c3fd83-1020x771.jpeg" height="50" width="50"/>
+    <img src="Foto/Fifa_World_Cup_Russia_2018_logo.png" height="50" width="150"/>
+</button>
 <div id="map"></div>
 <script>
     var map;
