--- a/Stadions.html
+++ b/Stadions.html
@@ -4,33 +4,22 @@
     <meta charset="UTF-8">
     <title>Stadions</title>
     <link rel="stylesheet" href="CssStadions.css">
-    <style>
-        #map{
-            width: 100%;
-            height: 1000px;
-        }
-    </style>
 </head>
 <body>
+
+<div id="map"></div>
 <button value="" id="home">
     <img src="Foto/762fbd2c-6988-4cfc-83d4-7a7da0c3fd83-1020x771.jpeg" height="50" width="50"/>
     <img src="Foto/Fifa_World_Cup_Russia_2018_logo.png" height="50" width="150"/>
 </button>
-<div id="map"></div>
 <script>
     var map;
     function initMap(){
         var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 4,
-            center: new google.maps.LatLng(55,37),
+            zoom: 15,
+            center: new google.maps.LatLng(55.7158863, 37.5070319),
             mapTypeId: 'hybrid'
         });
-        /*var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
-        var icons = {
-            info: {
-                icon: iconBase + 'info.png'
-            }
-        };*/
 
         var icons = {
             info: {
